--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-discord = "^1.0.1"
 python-dotenv = "^0.14.0"
 flask = "^1.1.2"
+replit = "^2.0.0"
+discord = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
